--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
 
 .floor {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -200%;
+  left: -200%;
+  width: 500%;
+  height: 500%;
   background: url("./floor-textures/Brick_01.png");
+  transform: rotate3d(1, 0, 1, 50deg);
 }
