--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@
   background: url("./floor-textures/Brick_01.png");
   transform: rotate3d(1, 0, 1, 50deg);
 }
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
