--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 * {
   box-sizing: border-box;
 }
-
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .floor {
   position: absolute;
   top: -200%;
   left: -200%;
   width: 500%;
   height: 500%;
-  background: url("./floor-textures/Brick_01.png");
+  background: url("https://i.ibb.co/Jm1kQTJ/Brick-01.png");
   transform: rotate3d(1, 0, 1, 50deg);
 }
-
 canvas {
   position: absolute;
   top: 0;
