--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 body {
@@ -12,7 +14,7 @@ body {
   left: -200%;
   width: 500%;
   height: 500%;
-  background: url("https://i.ibb.co/Jm1kQTJ/Brick-01.png");
+  background: url("./images/Brick_01.png");
   transform: rotate3d(1, 0, 1, 50deg);
 }
 canvas {
@@ -21,4 +23,18 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
+}
+.icon {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
+
+footer {
+  position: absolute;
+  width: 100%;
+  height: 55px;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed !important;
 }
