--- a/style.css
+++ b/style.css
@@ -3,11 +3,34 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
+
+h2 {
+  font-family: "didot";
+  font-size: 100px;
+  margin: 0;
+  writing-mode: vertical-lr;
+  text-align: center;
+  line-height: 0.9;
+}
+
+.rotate {
+  transform: rotate(180deg);
+}
+
+.game-title {
+  display: grid;
+  height: 100vh;
+  justify-content: right;
+  align-content: right;
+  grid-template-columns: max-content max-content;
+}
+
 .floor {
   position: absolute;
   top: -200%;
@@ -24,6 +47,7 @@ canvas {
   width: 100%;
   height: 100%;
 }
+
 .icon {
   width: 50px;
   height: 50px;
@@ -31,6 +55,7 @@ canvas {
 }
 
 #copyright {
+  position: relative;
   color: #ffffff;
   float: right;
   line-height: 32px;
