--- a/style.css
+++ b/style.css
@@ -1,16 +1,83 @@
-* {
+html,
+body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  padding-top: 1em;
+  text-align: center;
+  background-color: black;
+  background-image: url("./images/evoBeastbg.png");
+  background-size: cover;
+  background-repeat: space;
 }
 
+h1,
 h2 {
+  font-family: "Press Start 2P", monospace;
+  /* font-family: monospace; */
+  color: rgb(220, 20, 60, 0.5);
+}
+
+canvas {
+  background-image: url("./images/Brick_01.png");
+  background-repeat: repeat;
+  background-color: #222;
+  width: 100%;
+  height: 100;
+}
+
+#container {
+  max-width: 50em;
+  /* height: 70vh; */
+  background-color: rgb(0, 0, 0, 0.2);
+  padding: 1em;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-rows: 0.25fr 0.5fr 0.25fr;
+  grid-template-columns: 0.25fr 0.5fr 0.25fr;
+  grid-template-areas:
+    "top-left top-left top-right"
+    "game game game"
+    "btm-left btm-right btm-right";
+}
+
+#top-left,
+#top-right,
+#btm-left,
+#btm-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0, 0.2);
+}
+
+#top-left {
+  grid-area: top-left;
+}
+
+#top-right {
+  grid-area: top-right;
+  /* background-color: #222; */
+  /* background-image: url('../img/funky-lines.png'); */
+}
+
+main {
+  grid-area: game;
+}
+
+#btm-left {
+  grid-area: btm-left;
+  /* background-color: #222; */
+}
+
+#btm-right {
+  grid-area: btm-right;
+  /* background-color: #222; */
+}
+
+/*h2 {
   font-family: "didot";
   font-size: 100px;
   margin: 0;
@@ -29,24 +96,6 @@ h2 {
   justify-content: right;
   align-content: right;
   grid-template-columns: max-content max-content;
-}
-
-.floor {
-  position: absolute;
-  top: -200%;
-  left: -200%;
-  width: 500%;
-  height: 500%;
-  background: url("./images/Brick_01.png");
-  transform: rotate3d(1, 0, 1, 50deg);
-}
-
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .icon {
@@ -72,4 +121,4 @@ footer {
   bottom: 0px;
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed !important;
-}
+} */
