--- a/style.css
+++ b/style.css
@@ -2,83 +2,136 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 body {
   padding-top: 1em;
   text-align: center;
   background-color: black;
-  background-image: url("./images/evoBeastbg.png");
+  background-image: url("./images/pageBG.png");
   background-size: cover;
-  background-repeat: space;
-}
-
-h1,
-h2 {
-  font-family: "Press Start 2P", monospace;
-  /* font-family: monospace; */
-  color: rgb(220, 20, 60, 0.5);
 }
 
 canvas {
-  background-image: url("./images/Brick_01.png");
+  background-image: url("./images/canvasBG.png");
   background-repeat: repeat;
   background-color: #222;
-  width: 100%;
-  height: 100;
+  width: 960px;
+  height: 600px;
+  margin: 0 auto;
+  display: none;
 }
 
-#container {
-  max-width: 50em;
-  /* height: 70vh; */
-  background-color: rgb(0, 0, 0, 0.2);
-  padding: 1em;
-  display: grid;
-  grid-gap: 1em;
-  grid-template-rows: 0.25fr 0.5fr 0.25fr;
-  grid-template-columns: 0.25fr 0.5fr 0.25fr;
-  grid-template-areas:
-    "top-left top-left top-right"
-    "game game game"
-    "btm-left btm-right btm-right";
+.start-screen,
+.info-screen,
+.won-screen,
+.gameover-screen {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: whitesmoke;
+  border: 3px outset grey;
+  width: 180px;
+  height: 360px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  border-radius: 20px;
+  text-align: center;
+}
+.start-screen {
+  display: none;
+}
+.info-screen {
+  display: none;
+}
+.won-screen {
+  display: none;
+}
+.gameover-screen {
+  display: none;
 }
 
-#top-left,
-#top-right,
-#btm-left,
-#btm-right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(0, 0, 0, 0.2);
+#info-close {
+  padding: 5px 5px;
+  background-color: whitesmoke;
+  border: 3px outset grey;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 15px;
+  left: 67px;
 }
 
-#top-left {
-  grid-area: top-left;
+#info-close:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
 }
 
-#top-right {
-  grid-area: top-right;
-  /* background-color: #222; */
-  /* background-image: url('../img/funky-lines.png'); */
+#menu,
+#resetButton {
+  padding: 5px 5px;
+  border: 3px outset grey;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-main {
-  grid-area: game;
+#menu2,
+#resetButton2 {
+  padding: 5px 5px;
+  border: 3px outset grey;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-#btm-left {
-  grid-area: btm-left;
-  /* background-color: #222; */
+#menu:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
 }
 
-#btm-right {
-  grid-area: btm-right;
-  /* background-color: #222; */
+#resetButton:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
 }
 
-/* h4 {
+#menu2:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+#resetButton2:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+#startButton,
+#infoButton {
+  color: whitesmoke;
+  padding: 5px 5px;
+  border: 3px outset grey;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#startButton:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+#infoButton:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+h4 {
   font-family: "didot";
+  color: whitesmoke;
   font-size: 20px;
   margin: 0;
   writing-mode: vertical-lr;
@@ -92,9 +145,9 @@ main {
 
 .game-title {
   display: grid;
-  height: 100vh;
-  justify-content: right;
-  align-content: right;
+  height: 20vh;
+  justify-content: center;
+  align-content: center;
   grid-template-columns: max-content max-content;
 }
 
@@ -105,13 +158,12 @@ main {
 }
 
 #copyright {
-  position: relative;
+  position: absolute;
   color: #ffffff;
-  float: right;
   line-height: 32px;
-  margin-left: 200px;
+  /* margin-left: 200px;
   margin-top: 10px;
-  text-align: center;
+  text-align: center; */
 }
 
 footer {
@@ -121,4 +173,4 @@ footer {
   bottom: 0px;
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed !important;
-} */
+}
